--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,7 @@ github_username:  jskopek
 # Build settings
 markdown: kramdown
 exclude: ["vendor"]
+
+collections:
+    timelapses:
+        output: true
