--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "jskopek.github.io",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,5 +17,9 @@
   "homepage": "https://github.com/jskopek/jskopek.github.io#readme",
   "dependencies": {
     "bootstrap": "^4.1.3"
-  }
+  },
+  "devDependencies": {
+    "webpack": "^4.23.1"
+  },
+  "description": ""
 }
