Updating configuration to handle new virtual environment

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ permalink: /posts/:categories/:year/:month/:day/:title:output_ext
 
 # Build settings
 markdown: kramdown
-exclude: ["vendor"]
+exclude: ["vendor", "venv"]
 
 collections:
     timelapses:
